ExeC-incl-header-only-lib works!

--- a/ExeC-incl-header-only-lib/CMakeLists.txt
+++ b/ExeC-incl-header-only-lib/CMakeLists.txt
@@ -9,3 +9,6 @@ add_executable(
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE include)
+
+add_subdirectory(LibA)
+target_link_libraries(${PROJECT_NAME} PRIVATE LibA)
