ExeE: Moved LibA.h into include/LibA so that it can be included by LibC via LibA/LibA.h.

--- a/ExeE-incl-transitive-libs/CMakeLists.txt
+++ b/ExeE-incl-transitive-libs/CMakeLists.txt
@@ -12,3 +12,12 @@ target_include_directories(${PROJECT_NAME} PRIVATE include)
 
 add_subdirectory(dependencies/LibC)
 target_link_libraries(${PROJECT_NAME} PRIVATE LibC)
+
+
+## DEBUG
+message(Before Foreach)
+get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
+foreach(dir ${dirs})
+  message(STATUS "dir='${dir}'")
+endforeach()
+## DEBUG END
