--- a/ExeE-incl-transitive-libs/dependencies/LibC/dependencies/LibA/CMakeLists.txt
+++ b/ExeE-incl-transitive-libs/dependencies/LibC/dependencies/LibA/CMakeLists.txt
@@ -3,4 +3,6 @@ project(LibA VERSION 0.1.0)
 list(APPEND CMAKE_MESSAGE_CONTEXT ${PROJECT_NAME})
 
 add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE .)
+
+target_include_directories(${PROJECT_NAME}
+    INTERFACE include)
