ExeJ: Fetched online repos GLAD and GLFW which have a CMakeLists.txt.

--- a/ExeJ-fetch-glfw-glad/CMakeLists.txt
+++ b/ExeJ-fetch-glfw-glad/CMakeLists.txt
@@ -11,4 +11,7 @@ add_executable(
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 
 add_subdirectory(external)
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    glad
+    glfw
+)
