--- a/ExeF-fetch-header-only-lib/CMakeLists.txt
+++ b/ExeF-fetch-header-only-lib/CMakeLists.txt
@@ -10,8 +10,11 @@ add_executable(
 
 target_include_directories(${PROJECT_NAME} PRIVATE include)
 
+set(DIR_ROOT D:/Code/CMake/CMakeExeDependencies)
+set(DIR_LIBA ${DIR_ROOT}/dependencies/LibA)
+
 include(FetchContent)
-set(FETCHCONTENT_SOURCE_DIR_LIBA D:/Code/CMake/Own/dependencies/LibA)
+set(FETCHCONTENT_SOURCE_DIR_LIBA ${DIR_LIBA})
 FetchContent_Declare (
     LibA
 )
